index post layout bug fix.

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -120,6 +120,7 @@
 .post-group {
 	&.single {
 		.post-item {
+			width: columns(4);
 			@include at-breakpoint($wide-mobile) {
 			  width: columns(6);
 			}
